--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@ body {
 }
 
 :root {
+  --color-white: #fff;
+  --color-black: #000;
+
   --container-width-lg: 75%;
   --container-width-md: 86%;
   --container-width-sm: 90%;
@@ -33,4 +36,9 @@ img {
   display: block;
   width: 100%;
   object-fit: cover;
+}
+
+input {
+  padding: .5rem .8rem;
+  border-radius: .5rem;
 }
