--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,13 @@ body {
   margin: 0 auto;
 }
 
+.btn-sign {
+  padding: .5rem 1rem;
+  margin: 0 auto 0 0;
+  width: 50%;
+  cursor: pointer;
+}
+
 img {
   display: block;
   width: 100%;
